Save today's work.

--- a/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
+++ b/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -296,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -389,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -519,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 49,
       "metadata": {
         "id": "RVG4sS68T-af"
       },
@@ -604,14 +604,14 @@
         "\n",
         "    def get_generator_matrix(self):\n",
         "        \"\"\"\n",
-        "        Method to return the generator matrix for hamming code\n",
+        "        Methode um die Generator-Matrix auszugeben.\n",
         "        :return: generator matrix\n",
         "        \"\"\"\n",
         "        return self.gen_matrix\n",
         "\n",
         "    def get_check_matrix(self):\n",
         "        \"\"\"\n",
-        "        Method to return the check matrix for hamming code\n",
+        "        Methode um die Prüfmatrix auszugeben.\n",
         "        :return: check matrix\n",
         "        \"\"\"\n",
         "        return self.chk_matrix\n",
@@ -625,74 +625,57 @@
         "\n",
         "    def encode(self, word):\n",
         "        \"\"\"\n",
-        "        Method to encode the given word\n",
-        "        :param word: word to encode\n",
-        "        :return: encoded word (codeword)\n",
+        "        Methode zum \"encoden\" eines Wortes\"\n",
+        "        :param word: Wort zum \"encoden\"\n",
+        "        :return: \"encoded\" Wort\n",
         "        \"\"\"\n",
         "        word_array = [int(x) for x in str(bin(word)[2:])]\n",
         "        word_array_len = len(word_array)\n",
         "        if word_array_len < self.p:\n",
         "            for i in range(self.p - word_array_len):\n",
         "                word_array.insert(0, 0)\n",
-        "        tmp_encode = np.matmul(self.gen_matrix, word_array)\n",
-        "        for i in range(tmp_encode.size):\n",
-        "            if tmp_encode[i] > 1:\n",
-        "                if tmp_encode[i] % 2 == 0:\n",
-        "                    tmp_encode[i] = 0\n",
-        "                else:\n",
-        "                    tmp_encode[i] = 1\n",
+        "        tmp_encode = np.where(np.matmul(self.gen_matrix, word_array) % 2 == 0, 0, 1)\n",
         "        return ''.join(map(str, [int(x) for x in tmp_encode]))\n",
+        "        \n",
+        "        \n",
         "\n",
         "    def decode(self, codeword):\n",
         "        \"\"\"\n",
-        "        Method to decode the given codeword\n",
-        "        :param codeword: codeword to decode\n",
-        "        :return: decoded codeword\n",
+        "        Methode zum \"decoden\" eines Wortes\n",
+        "        :param codeword: Wort zum \"decoden\"\n",
+        "        :return: \"decoded\" Wort\n",
         "        \"\"\"\n",
         "        codeword_array = self.__to_array(codeword)\n",
-        "        tmp_decode = np.matmul(self.encode_matrix, codeword_array)\n",
-        "        decoded_word = []\n",
-        "        for d in tmp_decode:\n",
-        "            if d != 0 and d % 2 == 0:\n",
-        "                bit_d = 0\n",
-        "            else:\n",
-        "                bit_d = 1\n",
-        "            decoded_word.append(bit_d)\n",
+        "        decoded_word = np.where(np.matmul(self.encode_matrix, codeword_array) % 2 == 0, 0, 1)\n",
         "        return decoded_word\n",
         "\n",
         "    def check(self, codeword):\n",
         "        \"\"\"\n",
-        "        Methode to check if the given codeword is a correct codeword\n",
-        "        :param codeword: codeword to check\n",
-        "        :return: True if codeword is correct, False if codeword has errors\n",
+        "        Methode zum prüfen der Gültigkeit eines Codewortes.\n",
+        "        :param codeword: Codewort zum prüfen\n",
+        "        :return: \"True\" wenn das wort korrekt ist, \"False\" wen das codewort fehler hat.\n",
         "        \"\"\"\n",
         "        codeword_array = self.__to_array(codeword)\n",
-        "        tmp_check = np.matmul(self.chk_matrix, codeword_array)\n",
-        "        check = []\n",
-        "        for e in tmp_check:\n",
-        "            if e != 0 and e % 2 == 0:\n",
-        "                bit_e = 0\n",
-        "            else:\n",
-        "                bit_e = 1\n",
-        "            check.append(bit_e)\n",
+        "        check = np.where(np.matmul(self.chk_matrix, codeword_array) % 2 == 0, 0, 1)\n",
         "        error = sum(int(check) * (2 ** i) for i, check in enumerate(check[::-1]))\n",
         "        print(\"Error in bit: \", error)\n",
         "        return ''.join(map(str, [int(x) for x in check]))"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kEtFFEcSUN_g"
       },
       "source": [
         "### Ausführung\n",
-        "Die Klasse kann nun im Python Code verwendet werden.\n"
+        "Die Klasse kann nun im Python Code verwendet werden. Mit dem Aufruf `HamingCode(k)` wird eine Instanz der Klasse erzeugt mit $k$ Paritätsbits. Mir den verwschiedenen Methoden der Klasse können nun ausgaben generiert werden. So ist \n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -723,90 +706,96 @@
             " [0. 0. 0. 0. 0. 0. 1.]]\n",
             "Word:  0\n",
             "Encoded Word:  0000000\n",
-            "Error in bit:  7\n",
-            "Check Result:  111\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [0 0 0 0]\n",
             "Word:  1\n",
             "Encoded Word:  0001111\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [1 1 1 1]\n",
             "Word:  2\n",
             "Encoded Word:  0010011\n",
-            "Error in bit:  4\n",
-            "Check Result:  100\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [0 0 1 1]\n",
             "Word:  3\n",
             "Encoded Word:  0011100\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [1 1 0 0]\n",
             "Word:  4\n",
             "Encoded Word:  0100101\n",
-            "Error in bit:  2\n",
-            "Check Result:  010\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [0 1 0 1]\n",
             "Word:  5\n",
             "Encoded Word:  0101010\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [1 0 1 0]\n",
             "Word:  6\n",
             "Encoded Word:  0110110\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [0 1 1 0]\n",
             "Word:  7\n",
             "Encoded Word:  0111001\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [1 0 0 1]\n",
             "Word:  8\n",
             "Encoded Word:  1000110\n",
-            "Error in bit:  1\n",
-            "Check Result:  001\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [0 1 1 0]\n",
             "Word:  9\n",
             "Encoded Word:  1001001\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [1 0 0 1]\n",
             "Word:  10\n",
             "Encoded Word:  1010101\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [0 1 0 1]\n",
             "Word:  11\n",
             "Encoded Word:  1011010\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [1 0 1 0]\n",
             "Word:  12\n",
             "Encoded Word:  1100011\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [0 0 1 1]\n",
             "Word:  13\n",
             "Encoded Word:  1101100\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [1 1 0 0]\n",
             "Word:  14\n",
             "Encoded Word:  1110000\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [0 0 0 0]\n",
             "Word:  15\n",
             "Encoded Word:  1111111\n",
             "Error in bit:  0\n",
             "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Decoded Word:  [1 1 1 1]\n",
             "Hamming-Code with error\n",
             "Codeword with error:  0111011\n",
             "Error in bit:  2\n",
+            "Check Result:  010\n",
             "Hamming-Code with error\n",
-            "Codeword with error:  1100011\n",
-            "Error in bit:  0\n"
+            "Codeword with error:  1110011\n",
+            "Check Matrix:\n",
+            "  [[1. 1. 0. 1. 1. 0. 0.]\n",
+            " [1. 0. 1. 1. 0. 1. 0.]\n",
+            " [0. 1. 1. 1. 0. 0. 1.]]\n",
+            "Error in bit:  3\n",
+            "Check Result:  011\n"
           ]
         }
       ],
@@ -829,13 +818,17 @@
         "    print(\"Hamming-Code with error\")\n",
         "    codeword_with_error = \"0111011\"\n",
         "    print(\"Codeword with error: \", codeword_with_error)\n",
-        "    hamming.check(codeword_with_error)\n",
+        "    check = hamming.check(codeword_with_error)\n",
+        "    print(\"Check Result: \", check)\n",
         "\n",
         "     # Hamminc Code with error:\n",
         "    print(\"Hamming-Code with error\")\n",
-        "    codeword_with_error = \"1100011\"\n",
-        "    print(\"Codeword with error: \", codeword_with_error)\n",
-        "    hamming.check(codeword_with_error)\n",
+        "    codeword_with_error_2 = \"1110011\"\n",
+        "    print(\"Codeword with error: \", codeword_with_error_2)\n",
+        "    print(\"Check Matrix:\\n \", hamming.get_check_matrix())\n",
+        "    check = hamming.check(codeword_with_error_2)\n",
+        "    print(\"Check Result: \", check)\n",
+        "    \n",
         "\n",
         "\n",
         "def encode_decode(hamming, word):\n",
